# reservas_ticket

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
reservas/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tickets/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
tickets/migrations/: 0001_initial.py
